# rota_connector

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  base_client.py  client.py  exceptions.py  pyproject.toml  rota_service.py  test_service.py
.venv_build_test/: pyvenv.cfg
api/: __init__.py  projects.py  rota.py
implementation-examples/: manual_context_provider.py  requirements.txt
implementation-examples/with_context_provider/: client.py  providers_definitions.py
interfaces/: __init__.py  context_provider.py  resource_provider.py
schemas/: __init__.py  common.py
src/rota_connector/: __init__.py  base_client.py  client.py  configs.py
src/rota_connector/api/: projects.py  rota.py
src/rota_connector/interfaces/: context_provider.py  resource_provider.py
src/rota_connector/schemas/: common.py  project.py  rota.py
tests/: conftest.py  test_health.py  test_projects_api.py  test_rota_api.py
