[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rota-connector"
version = "1.0.0"
description = "Python 3.12+ connector SDK for the ROTA Core Service (Resource Optimisation & Time Allocation)"
readme = "README.md"
requires-python = ">=3.12"
license = "Proprietary"
authors = [
    {name = "Zeeshan", email = "dev@31g.co.uk"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic[email]>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "ruff>=0.4.0",
    "mypy>=1.0.0",
    "pytest>=8.0.0",
    "pytest-httpx>=0.30.0",
]

[tool.black]
line-length = 100
target-version = ['py312', 'py313']

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
